--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -3,6 +3,10 @@
 
 name: Python application
 
+  run: |
+    pip install flake8
+    flake8 . --exclude=venv
+
 on:
   push:
     branches: [ "main" ]
