--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -3,15 +3,18 @@
 
 name: Python application
 
+
+
   run: |
     pip install flake8
     flake8 . --exclude=venv
 
+
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "master" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "master" ]
 
 permissions:
   contents: read
